--- a/sound/soc/intel/boards/Kconfig
+++ b/sound/soc/intel/boards/Kconfig
@@ -277,6 +277,19 @@ config SND_SOC_INTEL_BXT_WM8804_MACH
 
 endif ## SND_SOC_SOF_APOLLOLAKE
 
+config SND_SOC_INTEL_CML_RT5682_MAX98357A_MACH
+	tristate "CML with RT5682 and MAX98357A in I2S Mode"
+	depends on MFD_INTEL_LPSS && I2C && ACPI
+	select SND_SOC_RT5682
+	select SND_SOC_DMIC
+	select SND_SOC_MAX98357A
+	select SND_SOC_HDAC_HDMI if SND_SOC_SOF_HDA_COMMON
+	help
+	  This adds support for ASoC machine driver for CML platform
+	  with RT5682 + MAX98357A I2S codec.
+	  Say Y if you have such a device.
+	  If unsure select "N".
+
 if SND_SOC_INTEL_KBL
 
 config SND_SOC_INTEL_KBL_RT5663_MAX98927_MACH
